--- a/pom.xml
+++ b/pom.xml
@@ -13,15 +13,32 @@
 
     <groupId>ru.gold.ordance</groupId>
     <artifactId>rgo-tt-security-proxy</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>24.0.0-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
+    <modules>
+        <module>rgo-tt-security-proxy-boot</module>
+    </modules>
+
     <properties>
         <java.version>17</java.version>
+
+        <rgo-tt-common.version>24.0.0-SNAPSHOT</rgo-tt-common.version>
     </properties>
 
     <dependencyManagement>
+        <dependencies>
+            <!-- external modules -->
+            <dependency>
+                <groupId>ru.gold.ordance</groupId>
+                <artifactId>rgo-tt-common</artifactId>
+                <version>${rgo-tt-common.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <!-- external modules -->
+        </dependencies>
     </dependencyManagement>
 
     <build>
