add service access implementation for clients service

--- a/rgo-tt-security-proxy-service/pom.xml
+++ b/rgo-tt-security-proxy-service/pom.xml
@@ -20,6 +20,13 @@
         </dependency>
         <!-- self-modules -->
 
+        <!-- armeria -->
+        <dependency>
+            <groupId>com.linecorp.armeria</groupId>
+            <artifactId>armeria</artifactId>
+        </dependency>
+        <!-- armeria -->
+
         <!-- test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
