--- a/rgo-tt-security-proxy-boot/src/main/resources/application-local-h2.yaml
+++ b/rgo-tt-security-proxy-boot/src/main/resources/application-local-h2.yaml
@@ -15,3 +15,5 @@ app:
     origins: 'http://localhost:5173'
     methods: GET, POST, PUT, DELETE
     maxAgeSeconds: 3600
+  services:
+    clients: 'http://localhost:8081'
