move api implementation to proxy-service module

--- a/rgo-tt-security-proxy-rest-api/pom.xml
+++ b/rgo-tt-security-proxy-rest-api/pom.xml
@@ -27,6 +27,13 @@
         </dependency>
         <!-- external modules -->
 
+        <!-- armeria -->
+        <dependency>
+            <groupId>com.linecorp.armeria</groupId>
+            <artifactId>armeria</artifactId>
+        </dependency>
+        <!-- armeria -->
+
         <!-- test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
